<resources>
    <string name="app_name">Bax</string>
    <string name="image_header">Image header</string>
    <string name="info">Info</string>
    <string name="timer">Timer</string>
    <string name="exercises">Exercises</string>
    <string name="train">Train</string>
    <string name="start">Start</string>
    <string name="rounds">Rounds</string>
    <string name="round_time">Round Time</string>
    <string name="time">Time</string>
    <string name="twomin">2 min</string>
    <string name="threemin">3 min</string>
    <string name="length">Length</string>
    <string name="zeromin">0 min</string>
    <string name="zerosec">0 s</string>
    <string name="fight">Fight</string>
    <string name="rest">Rest</string>
    <string name="initialtime">0 : 00</string>
    <string name="round">Round</string>
    <string name="initialRound">-</string>
    <string name="left">Left</string>
    <string name="stop">Stop</string>
    <string name="hashtag">#</string>
    <string name="title_attack_list">Attacks</string>
    <string name="title_attack_detail">Attack Detail</string>
    <string name="image_placeholder">Image placeholder</string>
    <string name="title_activity_exercise">Exercise</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="about">About</string>
    <string name="create">Create</string>
    <string name="backmenu">Back to Menu</string>
</resources>
