<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_timer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.alex.bax.TimerActivity">

    <include layout="@layout/image_header" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:gravity="bottom|start"
        android:orientation="vertical"
        android:weightSum="4">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="4"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/hashtag"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Large" />
            <TextView
                android:id="@+id/text_currentRound"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="4"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/initialRound"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Large" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="4"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/left"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Large" />
            <TextView
                android:id="@+id/text_timeLeft"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="4"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/initialtime"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Large" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/rounds"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/text_rounds"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginBottom="2dip"
                android:layout_weight="3"
                android:inputType="number"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textAlignment="center"
                android:theme="@style/AppTheme.Button" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/fight"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <SeekBar
                android:id="@+id/seek_roundTime"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginBottom="2dip"
                android:layout_weight="2"
                android:gravity="center"
                android:inputType="number"
                android:max="3"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:theme="@style/AppTheme.Button" />

            <TextView
                android:id="@+id/text_roundTime"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/zeromin"
                android:textAppearance="@android:style/TextAppearance.Medium" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/rest"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <SeekBar
                android:id="@+id/seek_restTime"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginBottom="2dip"
                android:layout_weight="2"
                android:gravity="center"
                android:inputType="number"
                android:max="60"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:theme="@style/AppTheme.Button" />

            <TextView
                android:id="@+id/text_restTime"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/zerosec"
                android:textAppearance="@android:style/TextAppearance.Medium" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_start"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="2"
                android:drawableLeft="@drawable/ic_box_glove"
                android:drawableStart="@drawable/ic_box_glove"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/start"
                android:theme="@style/AppTheme.Button" />

            <Button
                android:id="@+id/btn_stop"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="2"
                android:drawableLeft="@drawable/ic_cancel"
                android:drawableStart="@drawable/ic_cancel"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/stop"
                android:theme="@style/AppTheme.Button" />

        </TableRow>

    </TableLayout>
</RelativeLayout>
