<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_exercise"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.alex.bax.views.exercise.NewExerciseActivity">

    <include layout="@layout/image_header" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:gravity="bottom|start"
        android:orientation="vertical"
        android:weightSum="4">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/name"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/text_name"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginBottom="2dip"
                android:layout_weight="3"
                android:inputType="number"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textAlignment="center"
                android:theme="@style/AppTheme.Button" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/about"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/text_description"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginBottom="2dip"
                android:layout_weight="3"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textAlignment="center"
                android:theme="@style/AppTheme.Button" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_create"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="4"
                android:drawableLeft="@drawable/ic_box_glove"
                android:drawableStart="@drawable/ic_box_glove"
                android:paddingBottom="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/create"
                android:theme="@style/AppTheme.Button" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
